--- a/test.ipynb
+++ b/test.ipynb
@@ -41,7 +41,8 @@
     "loader = PyPDFLoader(\"NIPS-2017-attention-is-all-you-need-Paper.pdf\")\n",
     "pages = loader.load_and_split()\n",
     "\n",
-    "pages[1]"
+    "pages[1]\n",
+    "print(pages[2])"
    ]
   }
  ],
