1103 1504 CHH 앱 시나리오 작성

--- a/test.ipynb
+++ b/test.ipynb
@@ -41,6 +41,18 @@
     "pages[1]\n",
     "print(pages[2])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "앱을 누른다.\n",
+    "1. GPT 연동\n",
+    "2. 인터페이스 띄운다.\n",
+    "3. 명령을하고 메시지를 보낸다.\n",
+    "4. GPT가 알아서 답줌\n",
+    "5. 1~4 반복"
+   ]
   }
  ],
  "metadata": {
