--- a/Metaphor-Search.ipynb
+++ b/Metaphor-Search.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"METAPHOR_API_KEY\"] = \"67cc1aa8-a38c-4618-93a5-ab368f439423\"\n"
+    "# os.environ[\"METAPHOR_API_KEY\"] = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     "from langchain.agents import OpenAIFunctionsAgent\n",
     "from langchain.schema import SystemMessage\n",
     "\n",
-    "llm = ChatOpenAI(temperature=0)\n",
+    "llm = ChatOpenAI(temperature=0, openai_api_key=\"\")\n",
     "\n",
     "system_message = SystemMessage(\n",
     "    content=\"You are a AI Developer who uses search engines to look up information.\"\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -88,14 +88,12 @@
       "\u001b[0m\u001b[36;1m\u001b[1;3mTitle: [PDF] Attention is All you Need | Semantic Scholar\n",
       "URL: https://www.semanticscholar.org/paper/Attention-is-All-you-Need-Vaswani-Shazeer/204e3073870fae3d05bcbc2f6a8e263d9b72e776\n",
       "ID: lQDV0drnLNiIAYSfOYZyIQ\n",
-      "Score: 0.21587198972702026\n",
+      "Score: 0.2082224041223526\n",
       "Published Date: 2017-06-12\n",
       "Author: Ashish Vaswani; Noam M Shazeer; Niki Parmar; Jakob Uszkoreit; Llion Jones; Aidan N Gomez; Lukasz Kaiser; Illia Polosukhin\n",
       "Extract: None\n",
       "\n",
-      "Autoprompt String: Here is a link to a paper about \"Attention is All You Need\":\u001b[0m\u001b[32;1m\u001b[1;3mHere is the URL of the paper \"Attention is All You Need\":\n",
-      "\n",
-      "[Attention is All you Need | Semantic Scholar](https://www.semanticscholar.org/paper/Attention-is-All-you-Need-Vaswani-Shazeer/204e3073870fae3d05bcbc2f6a8e263d9b72e776)\u001b[0m\n",
+      "Autoprompt String: Here's a link to a paper about Attention is All You Need:\u001b[0m\u001b[32;1m\u001b[1;3mHere's a link to a paper about Attention is All You Need: [Attention is All you Need](https://www.semanticscholar.org/paper/Attention-is-All-you-Need-Vaswani-Shazeer/204e3073870fae3d05bcbc2f6a8e263d9b72e776)\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -103,10 +101,10 @@
     {
      "data": {
       "text/plain": [
-       "'Here is the URL of the paper \"Attention is All You Need\":\\n\\n[Attention is All you Need | Semantic Scholar](https://www.semanticscholar.org/paper/Attention-is-All-you-Need-Vaswani-Shazeer/204e3073870fae3d05bcbc2f6a8e263d9b72e776)'"
+       "\"Here's a link to a paper about Attention is All You Need: [Attention is All you Need](https://www.semanticscholar.org/paper/Attention-is-All-you-Need-Vaswani-Shazeer/204e3073870fae3d05bcbc2f6a8e263d9b72e776)\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
