--- a/ETC/Metaphor-Search.ipynb
+++ b/ETC/Metaphor-Search.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "# os.environ[\"METAPHOR_API_KEY\"] = \"\""
+    "os.environ[\"METAPHOR_API_KEY\"] = \"67cc1aa8-a38c-4618-93a5-ab368f439423\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     "from langchain.agents import OpenAIFunctionsAgent\n",
     "from langchain.schema import SystemMessage\n",
     "\n",
-    "llm = ChatOpenAI(temperature=0, openai_api_key=\"\")\n",
+    "llm = ChatOpenAI(temperature=0)\n",
     "\n",
     "system_message = SystemMessage(\n",
     "    content=\"You are a AI Developer who uses search engines to look up information.\"\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,15 +85,15 @@
       "Invoking: `search` with `{'query': 'Attention is All You Need'}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3mTitle: [PDF] Attention is All you Need | Semantic Scholar\n",
-      "URL: https://www.semanticscholar.org/paper/Attention-is-All-you-Need-Vaswani-Shazeer/204e3073870fae3d05bcbc2f6a8e263d9b72e776\n",
-      "ID: lQDV0drnLNiIAYSfOYZyIQ\n",
-      "Score: 0.2082224041223526\n",
-      "Published Date: 2017-06-12\n",
-      "Author: Ashish Vaswani; Noam M Shazeer; Niki Parmar; Jakob Uszkoreit; Llion Jones; Aidan N Gomez; Lukasz Kaiser; Illia Polosukhin\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3mTitle: The Rhythm of Your Screen - Christopher Butler\n",
+      "URL: https://www.chrbutler.com/the-rhythm-of-your-screen\n",
+      "ID: 0xAqeqf5p9nGPZ_EVhk4Kw\n",
+      "Score: 0.13958105444908142\n",
+      "Published Date: 2023-05-20\n",
+      "Author: None\n",
       "Extract: None\n",
       "\n",
-      "Autoprompt String: Here's a link to a paper about Attention is All You Need:\u001b[0m\u001b[32;1m\u001b[1;3mHere's a link to a paper about Attention is All You Need: [Attention is All you Need](https://www.semanticscholar.org/paper/Attention-is-All-you-Need-Vaswani-Shazeer/204e3073870fae3d05bcbc2f6a8e263d9b72e776)\u001b[0m\n",
+      "Autoprompt String: Here's a great article about \"Attention is All You Need\":\u001b[0m\u001b[32;1m\u001b[1;3mI'm sorry, but I couldn't find the specific URL for \"Attention is All You Need\" in the search results.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -101,10 +101,10 @@
     {
      "data": {
       "text/plain": [
-       "\"Here's a link to a paper about Attention is All You Need: [Attention is All you Need](https://www.semanticscholar.org/paper/Attention-is-All-you-Need-Vaswani-Shazeer/204e3073870fae3d05bcbc2f6a8e263d9b72e776)\""
+       "'I\\'m sorry, but I couldn\\'t find the specific URL for \"Attention is All You Need\" in the search results.'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,6 +116,13 @@
     "\n",
     "agent_executor.run(\"Give me URL of Attention is All You Need.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
