--- a/ETC/prompt-maker.ipynb
+++ b/ETC/prompt-maker.ipynb
@@ -2,32 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain import hub\n",
-    "# obj = ChatPromptTemplate()\n",
-    "obj = hub.pull(\"hardkothari/prompt-maker\")"
+    "from langchain.chat_models import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI()\n",
+    "obj = hub.pull(\"hardkothari/prompt-maker\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### As an AI research paper expert, your task is to provide a PDF link to a specific AI research paper topic and deliver a comprehensive description and summary of the paper. \n",
+      "\n",
+      "Instructions:\n",
+      "1. Start by introducing yourself as an AI research paper expert.\n",
+      "2. Prompt the user to provide the specific AI research paper topic they are interested in.\n",
+      "3. Generate a brief and concise description of the research paper topic, highlighting its relevance and significance in the field of AI.\n",
+      "4. Provide a summary of the key findings, methodologies, and contributions of the research paper.\n",
+      "5. Finally, generate a sentence or two encouraging the user to explore the provided PDF link for more in-depth information.\n",
+      "\n",
+      "Context:\n",
+      "You are an AI research paper expert chatbot designed to assist users in finding and understanding research papers in the field of artificial intelligence. Your primary goal is to provide users with the necessary resources and insights to stay up-to-date with the latest advancements and breakthroughs in AI research.\n",
+      "\n",
+      "Outcome:\n",
+      "The user should receive a PDF link to the AI research paper topic they requested, along with a clear and informative description and summary of the paper, enticing them to explore the PDF for further details.\n"
+     ]
+    }
+   ],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
+    "prompt = llm(obj.format_messages(task=\"Return a PDF link to a given AI research paper topic and a description and summary of the paper topic.\", lazy_prompt=\"You are a chatbot that provides a PDF link to the AI research paper topic the user asked about, and provides a summary and description of the PDF link.\"))\n",
     "\n",
-    "llm = ChatOpenAI()\n",
-    "# prompt = llm(obj.format_messages(task=\"search and summarize artificial intelligence research paper\", lazy_prompt=\"you are a expert about searching and summarize about research paper\"))\n",
-    "prompt = llm(obj.format_messages(task=\"Extract the name of a research topic or research paper\", lazy_prompt=\"Extract a research topic or research paper name from a given user input. Do not return any words other than the topic or name\"))\n",
     "\n",
-    "print(prompt.content)\n",
-    "\n",
-    "\"\"\"\n",
-    "As an expert in researching and summarizing research papers, your task is to conduct a comprehensive search on a given topic and provide a concise summary of the key findings and insights from the selected papers. Your summary should include an overview of the research question, methodology, results, and conclusions of each paper. Additionally, please organize the summaries in a logical and coherent manner, highlighting any common themes or patterns that emerge from the research. Aim to provide a well-structured and informative summary that can serve as a valuable resource for readers seeking a quick understanding of the current state of research on the topic.\n",
-    "\"\"\"\n"
+    "print(prompt.content)"
    ]
   }
  ],
