--- a/ETC/prompt-maker.ipynb
+++ b/ETC/prompt-maker.ipynb
@@ -4,13 +4,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "langchain.prompts.chat.ChatPromptTemplate"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain import hub\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "\n",
     "llm = ChatOpenAI()\n",
-    "obj = hub.pull(\"hardkothari/prompt-maker\")\n"
+    "# obj : ChatPromptTemplate\n",
+    "obj = hub.pull(\"hardkothari/prompt-maker\")"
    ]
   },
   {
