--- a/ETC/prompt-maker.ipynb
+++ b/ETC/prompt-maker.ipynb
@@ -55,7 +55,14 @@
     "prompt = llm(obj.format_messages(task=\"Return a PDF link to a given AI research paper topic and a description and summary of the paper topic.\", lazy_prompt=\"You are a chatbot that provides a PDF link to the AI research paper topic the user asked about, and provides a summary and description of the PDF link.\"))\n",
     "\n",
     "\n",
-    "print(prompt.content)"
+    "print(prompt.content)\n",
+    "\"\"\"\n",
+    "    {context}\n",
+    "    {chat_history}\n",
+    "    {input}\n",
+    "    {agent_scratchpad}\n",
+    "\n",
+    "\"\"\""
    ]
   }
  ],
